# wasm-policies

./: README.md  go.mod  go.sum  greet-host.go  greet.go  greet.wasm  main-tinygo.go  main-wat.go  main.wasm
allowedrepos/: host.go  policy.go  policy.wasm
allowedrepos/gatekeeper/: constraint.yaml  example_allowed.yaml  template.yaml
old/: gcd.wat  greet.go  main.go
privileged/: Cargo.toml  Makefile  policy.b64  policy.wasm
privileged/gatekeeper/: example_allowed.yaml  example_disallowed.yaml  template.yaml
privileged/src/: lib.rs
requiredlabels/: policy.go  policy.wasm
requiredlabels/gatekeeper/: constraint.yaml  example_allowed.yaml  example_disallowed.yaml  template.yaml
testdata/: greet.wasm
